# Blam-Creation-Suite

./: .gitignore  .gitmodules  .gn  BUILD.gn  BUILDCONFIG.gn  BlamCreationSuite.sln  CMakeLists.txt  Directory.Build.props  Directory.Build.targets  Halo.sln  LICENSE  Opus.sln  README.md  appveyor.yml  blamlib.sln  blamlib.vcxproj  blamlib.vcxproj.filters  debug.natvis  generate_solution.py  setup.bat  testscript.py  va_stdafx.h
ContentFramework/AudioConversion/: AudioConversion.vcxproj  AudioConversion.vcxproj.filters  CMakeLists.txt  audioconversion-platform-pch.h  audioconversion-private-pch.cpp  audioconversion-private-pch.h  audioconversion_tracked_memory.cpp  audioconversion_tracked_memory.h  xma2_to_wave.cpp  xma2_to_wave.h
Framework/GeometryLib/: CMakeLists.txt  assimp_geometry_mesh.cpp  assimp_geometry_mesh.h  assimp_geometry_scene.cpp  assimp_geometry_scene.h  geometry_mesh.h  geometry_scene.cpp  geometry_scene.h  geometrylib-private-pch.h  geometrylib-public-pch.h  geometrylib.cpp  radiance_transfer.h  radiance_transfer_cpu.cpp  radiance_transfer_cpu.h  radiance_transfer_gpu.cpp  radiance_transfer_gpu.h  sh_baker_cpu.cpp  sh_baker_cpu.h  uv_atlas_packer.cpp  uv_atlas_packer.h
Framework/GraphicsLib/: CMakeLists.txt  GraphicsLib.vcxproj  GraphicsLib.vcxproj.filters  dds.h  graphicslib-private-pch.h  graphicslib-public-pch.h  graphicslib_tracked_memory.cpp  graphicslib_tracked_memory.h
Framework/Platform/: CMakeLists.txt  Platform.vcxproj  Platform.vcxproj.filters  bcs_api.cpp  bcs_api.h  bcs_assert.cpp  bcs_assert.h  bcs_result.cpp  bcs_result.h  bcs_result_handle.h  callback.cpp  callback.h  callback_impl.c  callback_util.cpp  callback_util.h  clipboard.cpp  clipboard.h  command_line.cpp  command_line.h  console.cpp  console.h  crc32.cpp  crc32.h  debug_point.cpp  debug_point.h  debug_util.cpp  debug_util.h  endianness_util.h  engine_platform_build.cpp  engine_platform_build.h  enum_util.h  error_handling.cpp  error_handling.h  filesystem.cpp  filesystem.deprecated.inl  filesystem.h  filesystem_util.cpp  filesystem_util.h  float16.cpp  float16.h  (+34 more)
Framework/TemplateLibrary/: CMakeLists.txt  TemplateLibrary.vcxproj  atomic_lock.cpp  atomic_lock.h  auto_delete.h  benchmark.cpp  benchmark.h  binary_search.h  bitfield_allocator.cpp  bitfield_allocator.h  byteswap.cpp  byteswap.h  callback.h  compile_time_accumulator.h  fast_ascii_lookup.h  fast_byte_lookup.h  fixed_string.h  hybrid_chunked_resizable_array.h  inplace_wrapper.h  member_to_static_function.h  pointers.h  runtime_task.cpp  runtime_task.h  stack_string.h  stopwatch.cpp  stopwatch.h  templatelibrary-private-pch.cpp  templatelibrary-private-pch.h  templatelibrary-public-pch.h  templatelibrary_tracked_memory.cpp  templatelibrary_tracked_memory.h  thread_safe_queue.h  virtual.cpp  virtual.h
Framework/TextureLib/: CMakeLists.txt  directxtex_texture.cpp  texture.cpp  texture.h  texturelib-private-pch.h  texturelib-public-pch.h  texturelib.cpp  texturelib.h
Runtime/Halo3TagFileTest/: CMakeLists.txt  Halo3TagFileTest.vcxproj  Halo3TagFileTest.vcxproj.filters  crc32.cpp  crc32.h  halo3tagfiletest-private-pch.h  main.cpp  nodes.cpp  nodes.h  single_tag_file_header.h  single_tag_file_layout_reader.cpp  single_tag_file_layout_reader.h  single_tag_file_reader.cpp  single_tag_file_reader.h  tag_file_high_level_transplant.cpp  tag_file_high_level_transplant.h
Runtime/Mandrill/: CMakeLists.txt  Mandrill.vcxproj  Mandrill.vcxproj.filters  main.cpp  mandrill-private-pch.h  mandrill_tracked_memory.cpp  mandrill_tracked_memory.h
Tags/Blamtoozle/: CMakeLists.txt  blamtoozle-private-pch.h  blamtoozle-public-pch.h  main.cpp  move.bat
Tags/CacheFileSerialization/: CMakeLists.txt  cachefileserialization-private-pch.h  cachefileserialization-public-pch.h
Tags/ChimpLib/: CMakeLists.txt  Command.cs  CustomScript.cs
Tags/HighLevel/: CMakeLists.txt
Tags/HighLevelCacheFileSerialization/: CMakeLists.txt  high_level_ctor.cpp  high_level_transplant_context.cpp  high_level_transplant_context.h  highlevelcachefileserialization-private-pch.h  highlevelcachefileserialization-public-pch.h
Tags/LowLevel/: CMakeLists.txt
Tags/MandrillLib/: CMakeLists.txt  MandrillLib.vcxproj  MandrillLib.vcxproj.filters  haloreach_cache_compiler.cpp  haloreach_cache_compiler.h  high_level_ctor.cpp  logging_interface.h  mandrilllib-private-pch.cpp  mandrilllib-private-pch.h  mandrilllib-public-pch.h  mandrilllib_tracked_memory.cpp  mandrilllib_tracked_memory.h  status_interface.h  tag_file_reader_stack.cpp  tag_file_reader_stack.h  tests.cpp  tests.h  virtual_memory_container.cpp  virtual_memory_container.h
Tags/MandrillUI/: CMakeLists.txt  MandrillUI.vcxproj  MandrillUI.vcxproj.filters  mandrillui-private-pch.cpp  mandrillui-private-pch.h  mandrillui_tracked_memory.cpp  mandrillui_tracked_memory.h
Tags/RuntimeDefinitions/: CMakeLists.txt  runtime_block_index_custom_search_definition.cpp  runtime_tag_array_definition.cpp  runtime_tag_array_definition.h  runtime_tag_block_definition.cpp  runtime_tag_block_definition.h  runtime_tag_data_definition.cpp  runtime_tag_data_definition.h  runtime_tag_definitions.cpp  runtime_tag_definitions.h  runtime_tag_field.cpp  runtime_tag_field.h  runtime_tag_group_definition.cpp  runtime_tag_group_definition.h  runtime_tag_interop_definition.cpp  runtime_tag_interop_definition.h  runtime_tag_reference_definition.cpp  runtime_tag_reference_definition.h  (+6 more)
resources/: BUILD.gn
toolchain/: BUILD.gn  BUILDCONFIG.gn  action_build_assimp.py  action_build_ffmpeg.py  action_build_stamp.py  action_build_winpix3.py  action_build_zlib.py  appveyor.yml  bcs_projects.gni  build_assimp.py  build_cmake.py  build_copy.py  build_download.py  build_extract.py  build_ffmpeg.py  build_ffmpeg.sh  build_ffmpeg_arm64.sh  build_ffmpeg_x64.sh  build_ffmpeg_x86.sh  build_gn.py  build_msys2.py  build_ninja.py  build_stamp.py  build_task_manager.py  build_winpix3.py  build_yasm.py  build_zlib.py  compile_hlsl.py  generate_gn_root.py  generate_solution.py  gn.py  msys2_firstrun.sh  project_setup.py  regenerate_solution.py  sln.py  util.py
(+7273 files in other folders)
