import("//toolchain/bcs_projects.gni")

bcs_source_set("all_build") {
  deps = [
    "//contentframework/audioconversion",
    "//debugfiletools/symbolslib",
    "//debugfiletools/symbolspreprocessor",
    "//framework/blamlib",
    "//framework/devicecommunication",
    "//framework/geometrylib",
    "//framework/graphicslib",
    "//framework/platform",
    "//framework/templatelibrary",
    "//framework/texturelib",
    "//runtime/mandrill",
    "//runtime/development/blamtoozlecmd",
    "//tags/blamtoozle",
    "//tags/cachefileserialization",
    "//tags/highlevelcachefileserialization",
    "//tags/mandrilllib",
    "//tags/mandrillui",
    "//tags/runtimedefinitions",
    "//tags/stringdefinitions",
    "//tags/tagcodegen",
    "//tags/tagdefinitions",
    "//tags/tagfileserialization",
    "//tags/tagframework",
    "//tags/tagreflection",
    "//tags/tagregistry",
    "//tags/tagvalidate",
    "//thirdparty/directxmesh",
    "//thirdparty/directxtex",
    "//thirdparty/iconfontcppheaders",
    "//thirdparty/imgui",
    "//thirdparty/lzxlib",
    "//thirdparty/xatlas",
    "//thirdparty/zlib",
    "//resources" ]
  if (is_target_windows && is_target_64bit) {
    deps += [ "//thirdparty/winpix3" ]
  }
}

bcs_executable("bcs_executable") {
  sources = [
    "bcs/bcs_executable.cpp",
    "bcs/bcs.h" ]

  deps = [
    "framework/platform:platform",
    "framework/platform:platform_entry_point",
    ":bcs_shared",
    ":bcs_static" ]
}

bcs_library("bcs_shared") {
  sources = [
    "bcs/bcs_shared.cpp",
    "bcs/bcs.h" ]
}

bcs_static_library("bcs_static") {
  sources = [
    "bcs/bcs_static.cpp",
    "bcs/bcs.h" ]
}

bcs_shared_library("bcs_python") {
  sources = [
    "bcs/bcs_python.cpp",
    "bcs/bcs.h" ]
}

bcs_executable("wasm_test") {
  sources = [
    "bcs/wasm_test.cpp",
    "bcs/bcs.h" ]
}

bcs_python("mandrill_python_stub") {
  inputs = [
    "bcs/mandrill.py",
    "bcs/main.py" ]

  deps = [ ":bcs_python" ]
}
